<resources>
    <string name="app_name">Password Keeper</string>
    <string name="action_settings">Settings</string>

    <string name="account_name">Name</string>
    <string name="account_type">Type</string>
    <string name="account_uri">URI</string>
    <string name="account_login">Login</string>
    <string name="account_password">Password</string>
    <string name="account_note">Note</string>
    <string name="account_login_email">Email as Login</string>
    <string name="account_email">Email</string>
</resources>
