<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10sp"
    android:paddingRight="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10sp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/account_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/account_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10sp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/account_type"/>

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/account_type"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10sp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/account_email"/>

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/account_email"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10sp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/account_login"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/account_login"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10sp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/account_login_email"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/account_login_email"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10sp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/account_password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/account_password"/>

    </LinearLayout>

</LinearLayout>